--- a/Site Stealwar/Avancement.html
+++ b/Site Stealwar/Avancement.html
@@ -27,7 +27,7 @@
                 <li><a href="ProposDeNous.html">A Propos de Nous</a></li>
                 <li class="current"><a href="Avancement.html">Notre Avancement</a></li>
                 <li><a href="two-sidebar.html">Référence</a></li>
-                <li><a href="no-sidebar.html">No Sidebar</a></li>
+                <li><a href="no-sidebar.html">Mentions légales</a></li>
             </ul>
         </nav>
 
@@ -36,12 +36,13 @@
     <!-- Main -->
     <section class="wrapper style1">
         <div class="container">
-            <div class="col-8 col-12-narrower">
+            <div class="col-6 col-6-narrower">
                 <div id="content">
+
 
                     <article>
                         <header>
-                            <h2>Qui sommes nous ?</h2>
+                            <h2>Nos Prévsions</h2>
                         </header>
 
                         <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
@@ -53,11 +54,46 @@
 
                 </div>
             </div>
+            <div class="col-6 col-6-narrower">
+
+            </div>
 
             <div class="progress-container">
                 <div class="progress-bar"></div>
             </div>
+            <section> <div id="titleBar"></div>
+                <article>
+                    <header>
+                        <h2></h2>
+                    </header>
 
+                </article>
+            <table>
+                <thead>
+                <tr>
+                    <th>Task</th>
+                    <th>Start</th>
+                    <th>Duration (days)</th>
+                    <th>End</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>Website</td>
+                    <td>15/01/2024</td>
+                    <td>7</td>
+                    <td>22/01/2024</td>
+                </tr>
+                <tr>
+                    <td>Game controller</td>
+                    <td>15/01/2024</td>
+                    <td>76</td>
+                    <td>31/03/2024</td>
+                </tr>
+                <!-- Ajoutez les autres lignes ici -->
+                </tbody>
+            </table>
+    </section>
 
 
                 <!-- Footer -->
@@ -67,11 +103,11 @@
                             <section class="col-3 col-6-narrower col-12-mobilep">
                                 <h3>Links to Stuff</h3>
                                 <ul class="links">
-                                    <li class="current"><a href="index.html">Home</a></li>
+                                    <li><a href="index.html">Home</a></li>
                                     <li><a href="ProposDeNous.html">A Propos de Nous</a></li>
-                                    <li><a href="right-sidebar.html">Notre Avancement</a></li>
+                                    <li class="current"><a href="Avancement.html">Notre Avancement</a></li>
                                     <li><a href="two-sidebar.html">Référence</a></li>
-                                    <li><a href="no-sidebar.html">No Sidebar</a></li>
+                                    <li><a href="no-sidebar.html">Mentions légales</a></li>
                                 </ul>
                             </section>
                             <section class="col-6 col-12-narrower">
@@ -95,6 +131,7 @@
                                     </ul>
                                 </div>
                             </section>
+
                         </div>
                     </div>
 
@@ -106,6 +143,7 @@
                     <script src="assets/js/util.js"></script>
                     <script src="assets/js/main.js"></script>
                 </div>
+        </div>
             </section>
         </div>
     </section>
