--- a/Site Stealwar/ProposDeNous.html
+++ b/Site Stealwar/ProposDeNous.html
@@ -27,7 +27,7 @@
                 <li class="current"><a href="ProposDeNous.html">A Propos de Nous</a></li>
                 <li><a href="Avancement.html">Notre Avancement</a></li>
                 <li><a href="two-sidebar.html">Référence</a></li>
-                <li><a href="no-sidebar.html">No Sidebar</a></li>
+                <li><a href="no-sidebar.html">Mentions légales</a></li>
             </ul>
         </nav>
 
@@ -96,7 +96,7 @@
                         </section>
                         <section class="col-6 col-12-narrower">
                             <div class="box post">
-                                <a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
+                                <a href="#" class="image left"><img src="images/pic05.jpg" alt="" /></a>
                                 <div class="inner">
                                     <h3>Jules Mangel</h3>
                                     <p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
@@ -114,11 +114,11 @@
                             <section class="col-3 col-6-narrower col-12-mobilep">
                                 <h3>Links to Stuff</h3>
                                 <ul class="links">
-                                    <li class="current"><a href="index.html">Home</a></li>
-                                    <li><a href="ProposDeNous.html">A Propos de Nous</a></li>
-                                    <li><a href="right-sidebar.html">Notre Avancement</a></li>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li class="current"><a href="ProposDeNous.html">A Propos de Nous</a></li>
+                                    <li><a href="Avancement.html">Notre Avancement</a></li>
                                     <li><a href="two-sidebar.html">Référence</a></li>
-                                    <li><a href="no-sidebar.html">No Sidebar</a></li>
+                                    <li><a href="no-sidebar.html">Mentions légales</a></li>
                                 </ul>
                             </section>
                             <section class="col-6 col-12-narrower">
