--- a/Site Stealwar/index.html
+++ b/Site Stealwar/index.html
@@ -27,8 +27,8 @@
 								<li class="current"><a href="index.html">Home</a></li>
 								<li><a href="ProposDeNous.html">A Propos de Nous</a></li>
 								<li><a href="Avancement.html">Notre Avancement</a></li>
-								<li><a href="two-sidebar.html">Référence</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
+								<li><a href="left-sidebar.html">Référence</a></li>
+								<li><a href="no-sidebar.html">Mentions légale</a></li>
 							</ul>
 						</nav>
 
@@ -41,26 +41,33 @@
 						<a href="#" class="button">Learn More</a>
 					</header>-->
 				</section>
-
+			<!-- Gigantic Heading -->
+			<section class="wrapper style2">
+				<div class="container">
+					<header class="major">
+						<h2>A gigantic heading you can use for whatever</h2>
+						<p>With a much smaller subtitle hanging out just below it</p>
+						<a href="votre_fichier.zip" download>  <!-- Ici faut mettre le chemin de notre fichier  -->
+							<button type="button" title="Télécharger le jeu">
+								<i class="fa fa-download"></i> Télécharger le jeu
+							</button>
+						</a>
+					</header>
+				</div>
+			</section>
 			<!-- Highlights -->
 				<section class="wrapper style1">
 					<div class="container">
 						<div class="row gtr-200">
-							<section class="col-4 col-12-narrower">
-								<div class="box highlight">
-									<i class="icon solid major fa-paper-plane"></i>
-									<h3>This Is Important</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-								</div>
-							</section>
-							<section class="col-4 col-12-narrower">
+
+							<section class="col-6 col-6-narrower">
 								<div class="box highlight">
 									<i class="icon solid major fa-pencil-alt"></i>
 									<h3>Also Important</h3>
 									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
 								</div>
 							</section>
-							<section class="col-4 col-12-narrower">
+							<section class="col-6 col-6-narrower">
 								<div class="box highlight">
 									<i class="icon solid major fa-wrench"></i>
 									<h3>Probably Important</h3>
@@ -71,15 +78,7 @@
 					</div>
 				</section>
 
-			<!-- Gigantic Heading -->
-				<section class="wrapper style2">
-					<div class="container">
-						<header class="major">
-							<h2>A gigantic heading you can use for whatever</h2>
-							<p>With a much smaller subtitle hanging out just below it</p>
-						</header>
-					</div>
-				</section>
+
 
 			<!-- Posts -->
 				<section class="wrapper style1">
@@ -87,27 +86,7 @@
 						<div class="row">
 							<section class="col-6 col-12-narrower">
 								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
-									<div class="inner">
-										<h3>The First Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-									</div>
-								</div>
-							</section>
-							<section class="col-6 col-12-narrower">
-								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic02.jpg" alt="" /></a>
-									<div class="inner">
-										<h3>The Second Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-									</div>
-								</div>
-							</section>
-						</div>
-						<div class="row">
-							<section class="col-6 col-12-narrower">
-								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
 									<div class="inner">
 										<h3>The Third Thing</h3>
 										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
@@ -144,11 +123,11 @@
 							<section class="col-3 col-6-narrower col-12-mobilep">
 								<h3>Links to Stuff</h3>
 								<ul class="links">
-										<li class="current"><a href="index.html">Home</a></li>
-										<li><a href="ProposDeNous.html">A Propos de Nous</a></li>
-										<li><a href="right-sidebar.html">Notre Avancement</a></li>
-										<li><a href="two-sidebar.html">Référence</a></li>
-										<li><a href="no-sidebar.html">No Sidebar</a></li>
+									<li class="current"><a href="index.html">Home</a></li>
+									<li><a href="ProposDeNous.html">A Propos de Nous</a></li>
+									<li><a href="Avancement.html">Notre Avancement</a></li>
+									<li><a href="two-sidebar.html">Référence</a></li>
+									<li><a href="no-sidebar.html">Mentions légale</a></li>
 								</ul>
 							</section>
 							<section class="col-6 col-12-narrower">
