--- a/Site Stealwar/no-sidebar.html
+++ b/Site Stealwar/no-sidebar.html
@@ -5,147 +5,115 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>No Sidebar - Arcana by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<head><meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Mentions Légales - Crystal Games</title>
+		<link rel="icon" type="images/logo.png" href=" images/logo.png">
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<style>
+			body {
+				font-family: Arial, sans-serif;
+				margin: 0;
+				padding: 0;
+				background-color: #f5f5f5;
+				color: #333;
+			}
+
+			main {
+				max-width: 800px;
+				margin: 20px auto;
+				padding: 20px;
+				background-color: #fff;
+				border-radius: 8px;
+				box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+			}
+
+			footer {
+				text-align: center;
+				padding: 1em;
+				background-color: #333;
+				color: #fff;
+			}
+
+			h1 {
+				margin-top: 0;
+			}
+
+			h2 {
+				margin-top: 20px;
+			}
+
+			p {
+				line-height: 1.6;
+			}
+
+			ul {
+				margin: 0;
+				padding: 0;
+				list-style-type: none;
+			}
+
+			ul li {
+				margin-bottom: 5px;
+			}
+		</style>
 	</head>
-	<body class="is-preload">
-		<div id="page-wrapper">
+	<body>
 
-			<!-- Header -->
-				<div id="header">
+	<div id="header">
 
-					<!-- Logo -->
-						<h1><a href="index.html" id="logo">Arcana <em>by HTML5 UP</em></a></h1>
+		<!-- Logo -->
+		<h1><a href="index.html" id="logo">Steel War <em> by Crystal games</em></a></h1>
 
-					<!-- Nav -->
-						<nav id="nav">
-							<ul>
-								<li><a href="index.html">Home</a></li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="two-sidebar.html">Two Sidebar</a></li>
-								<li class="current"><a href="no-sidebar.html">No Sidebar</a></li>
-							</ul>
-						</nav>
+		<!-- Nav -->
+		<nav id="nav">
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="ProposDeNous.html">A Propos de Nous</a></li>
+				<li><a href="Avancement.html">Notre Avancement</a></li>
+				<li><a href="two-sidebar.html">Référence</a></li>
+				<li class="current"><a href="no-sidebar.html">Mentions légales</a></li>
+			</ul>
+		</nav>
 
-				</div>
+	</div>
 
-			<!-- Main -->
-				<section class="wrapper style1">
-					<div class="container">
-						<div id="content">
+	<main>
+		<h2>Informations sur l'entreprise</h2>
+		<p>Raison sociale : Crystal Games</p>
+		<p>Date de fondation : Novembre 2023</p>
+		<p>Siège social : [Adresse du siège social]</p>
+		<p>Forme juridique : [Forme juridique de l'entreprise]</p>
+		<p>Capital social : [Montant du capital social]</p>
+		<p>Numéro SIRET : [Numéro SIRET de l'entreprise]</p>
+		<p>Numéro TVA : [Numéro TVA de l'entreprise]</p>
 
-							<!-- Content -->
+		<h2>Responsable de la publication</h2>
+		<p>Nom du responsable : Jules Mangel</p>
+		<p>Contact : jules.mangel@epta.fr</p>
 
-								<article>
-									<header>
-										<h2>No Sidebar</h2>
-										<p>All content, all the time.</p>
-									</header>
+		<h2>Hébergement du site</h2>
+		<p>Nom de l'hébergeur : [Nom de l'hébergeur]</p>
+		<p>Adresse de l'hébergeur : [Adresse de l'hébergeur]</p>
 
-									<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
+		<h2>Propriété intellectuelle</h2>
+		<p>Le contenu de ce site web est protégé par les lois sur la propriété intellectuelle. Toute reproduction ou utilisation non autorisée du contenu est strictement interdite.</p>
 
-									<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-									Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-									Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-									consequat etiam lorem ipsum dolor sit amet nullam.</p>
+		<h2>Données personnelles</h2>
+		<p>Ce site web peut collecter et traiter des données personnelles conformément à notre politique de confidentialité. Les utilisateurs ont le droit d'accéder, de rectifier et de supprimer leurs données personnelles.</p>
+		<p>Notre site utilise des cookies pour améliorer l'expérience utilisateur. En utilisant ce site, vous consentez à l'utilisation de cookies conformément à notre politique de cookies.</p>
 
-									<h3>And Yet Another Subheading</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-									justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-									ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-									vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-									Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-									rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-									Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-									Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
+		<h2>Liens externes</h2>
+		<p>Ce site peut contenir des liens vers des sites externes. Nous ne sommes pas responsables du contenu ou de la politique de confidentialité de ces sites.</p>
 
-									<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-									quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-									Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-									fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-									Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-									Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
-								</article>
+		<h2>Responsabilité</h2>
+		<p>Nous nous efforçons de fournir des informations exactes et à jour sur ce site, mais nous ne garantissons pas l'exactitude, l'exhaustivité ou la pertinence des informations fournies. Nous déclinons toute responsabilité quant à l'utilisation de ce site ou des informations qu'il contient.</p>
+	</main>
 
-						</div>
-					</div>
-				</section>
+	<footer>
+		<p>&copy; 2024 Crystal Games. Tous droits réservés.</p>
+	</footer>
 
-			<!-- Footer -->
-				<div id="footer">
-					<div class="container">
-						<div class="row">
-							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>Links to Stuff</h3>
-								<ul class="links">
-									<li><a href="#">Mattis et quis rutrum</a></li>
-									<li><a href="#">Suspendisse amet varius</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan dolor</a></li>
-									<li><a href="#">Mattis rutrum accumsan</a></li>
-									<li><a href="#">Suspendisse varius nibh</a></li>
-									<li><a href="#">Sed et dapibus mattis</a></li>
-								</ul>
-							</section>
-							<section class="col-3 col-6-narrower col-12-mobilep">
-								<h3>More Links to Stuff</h3>
-								<ul class="links">
-									<li><a href="#">Duis neque nisi dapibus</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan sed</a></li>
-									<li><a href="#">Mattis et sed accumsan</a></li>
-									<li><a href="#">Duis neque nisi sed</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum amet varius</a></li>
-								</ul>
-							</section>
-							<section class="col-6 col-12-narrower">
-								<h3>Get In Touch</h3>
-								<form>
-									<div class="row gtr-50">
-										<div class="col-6 col-12-mobilep">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="col-6 col-12-mobilep">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="col-12">
-											<textarea name="message" id="message" placeholder="Message" rows="5"></textarea>
-										</div>
-										<div class="col-12">
-											<ul class="actions">
-												<li><input type="submit" class="button alt" value="Send Message" /></li>
-											</ul>
-										</div>
-									</div>
-								</form>
-							</section>
-						</div>
-					</div>
-
-					<!-- Icons -->
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon brands fa-google-plus-g"><span class="label">Google+</span></a></li>
-						</ul>
-
-					<!-- Copyright -->
-						<div class="copyright">
-							<ul class="menu">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-
-				</div>
-
-		</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
