--- a/Site Stealwar/no-sidebar.html
+++ b/Site Stealwar/no-sidebar.html
@@ -71,7 +71,7 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="ProposDeNous.html">A Propos de Nous</a></li>
 				<li><a href="Avancement.html">Notre Avancement</a></li>
-				<li><a href="two-sidebar.html">Référence</a></li>
+				<li><a href="Reference.html">Référence</a></li>
 				<li class="current"><a href="no-sidebar.html">Mentions légales</a></li>
 			</ul>
 		</nav>
@@ -82,19 +82,18 @@
 		<h2>Informations sur l'entreprise</h2>
 		<p>Raison sociale : Crystal Games</p>
 		<p>Date de fondation : Novembre 2023</p>
-		<p>Siège social : [Adresse du siège social]</p>
-		<p>Forme juridique : [Forme juridique de l'entreprise]</p>
-		<p>Capital social : [Montant du capital social]</p>
-		<p>Numéro SIRET : [Numéro SIRET de l'entreprise]</p>
-		<p>Numéro TVA : [Numéro TVA de l'entreprise]</p>
+		<p>Siège social : : 86 Bd Marius Vivier Merle, 69003 Lyon</p>
+		<p>Forme juridique : Société à responsabilité limitée (SARL)</p>
+		<p>Numéro SIRET : 362 521 879 00034</p>
+		<p>Numéro TVA : FR 32 123456789</p>
 
 		<h2>Responsable de la publication</h2>
 		<p>Nom du responsable : Jules Mangel</p>
 		<p>Contact : jules.mangel@epta.fr</p>
 
 		<h2>Hébergement du site</h2>
-		<p>Nom de l'hébergeur : [Nom de l'hébergeur]</p>
-		<p>Adresse de l'hébergeur : [Adresse de l'hébergeur]</p>
+		<p>Nom de l'hébergeur : GitHub</p>
+		<p>Adresse de l'hébergeur : https://github.com/</p>
 
 		<h2>Propriété intellectuelle</h2>
 		<p>Le contenu de ce site web est protégé par les lois sur la propriété intellectuelle. Toute reproduction ou utilisation non autorisée du contenu est strictement interdite.</p>
