--- a/Site Stealwar/Avancement.html
+++ b/Site Stealwar/Avancement.html
@@ -10,6 +10,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="icon" type="images/logo.png" href=" images/logo.png">
 </head>
 <body class="is-preload">
 <div id="page-wrapper">
@@ -18,7 +19,7 @@
     <div id="header">
 
         <!-- Logo -->
-        <h1><a href="index.html" id="logo">Steel War <em> by Crystal games</em></a></h1>
+        <h1><a href="index.html" id="logo">StealWar <em> by Crystal games</em></a></h1>
 
         <!-- Nav -->
         <nav id="nav">
@@ -26,7 +27,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="ProposDeNous.html">A Propos de Nous</a></li>
                 <li class="current"><a href="Avancement.html">Notre Avancement</a></li>
-                <li><a href="two-sidebar.html">Référence</a></li>
+                <li><a href="Reference.html">Référence</a></li>
                 <li><a href="no-sidebar.html">Mentions légales</a></li>
             </ul>
         </nav>
@@ -40,17 +41,16 @@
                 <div id="content">
 
 
-                    <article>
+
                         <header>
                             <h2>Nos Prévsions</h2>
                         </header>
 
-                        <p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-                            Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-                            Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-                            consequat etiam lorem ipsum dolor sit amet nullam.</p>
+                        <p>Afin d’assurer la mise en place et le développement du projet StealWar, nous avons décidé, de répartir les tâches équitablement entre les différents membres de l’entreprise.</P>
 
-                    </article>
+                        <p>Cette répartition a été décidée à l’issu de différentes discussions et négociations, qui ont permis de choisir une répartition qui se veut optimale, mais qui permet également à tous les membres du groupe d’être satisfaits. </p>
+
+
 
                 </div>
             </div>
@@ -60,7 +60,7 @@
 
             <div class="progress-container">
                 <div class="progress-bar"></div>
-            </div>
+            </div><p>Nous sommes a 15% du jeux </p>
             <section> <div id="titleBar"></div>
                 <article>
                     <header>
@@ -90,6 +90,49 @@
                     <td>76</td>
                     <td>31/03/2024</td>
                 </tr>
+                <tr>
+                    <td>AI</td>
+                    <td>15/01/2024</td>
+                    <td>76</td>
+                    <td>31/03/2024</td>
+                </tr>
+                <tr>
+                    <td>Game Design</td>
+                    <td>15/01/2024</td>
+                    <td>76</td>
+                    <td>31/03/2024</td>
+                </tr>
+                <tr>
+                    <td>Multiplayer</td>
+                    <td>15/01/2024</td>
+                    <td>76</td>
+                    <td>31/03/2024</td>
+                </tr>
+                <tr>
+                    <td>Graphism</td>
+                    <td>01/04/2024</td>
+                    <td>76</td>
+                    <td>16/06/2024</td>
+                </tr>
+                <tr>
+                    <td>Gameplay player</td>
+                    <td>01/04/2024</td>
+                    <td>76</td>
+                    <td>16/06/2024</td>
+                </tr>
+                <tr>
+                    <td>Gameplayer guard</td>
+                    <td>01/04/2024</td>
+                    <td>76</td>
+                    <td>16/06/2024</td>
+                </tr>
+                <tr>
+                    <td>Menu</td>
+                    <td>01/04/2024</td>
+                    <td>76</td>
+                    <td>16/06/2024</td>
+                </tr>
+
                 <!-- Ajoutez les autres lignes ici -->
                 </tbody>
             </table>
@@ -97,44 +140,55 @@
 
 
                 <!-- Footer -->
-                <div id="footer">
-                    <div class="container">
-                        <div class="row">
-                            <section class="col-3 col-6-narrower col-12-mobilep">
-                                <h3>Links to Stuff</h3>
-                                <ul class="links">
-                                    <li><a href="index.html">Home</a></li>
-                                    <li><a href="ProposDeNous.html">A Propos de Nous</a></li>
-                                    <li class="current"><a href="Avancement.html">Notre Avancement</a></li>
-                                    <li><a href="two-sidebar.html">Référence</a></li>
-                                    <li><a href="no-sidebar.html">Mentions légales</a></li>
+            <div id="footer">
+                <div class="container">
+                    <div class="row">
+                        <section class="col-3 col-6-narrower col-12-mobilep">
+                            <h3>Links to Stuff</h3>
+                            <ul class="links">
+                                <li class="current"><a href="index.html">Home</a></li>
+                                <li><a href="ProposDeNous.html">A Propos de Nous</a></li>
+                                <li><a href="Avancement.html">Notre Avancement</a></li>
+                                <li><a href="Reference.html">Référence</a></li>
+                                <li><a href="no-sidebar.html">Mentions légale</a></li>
+                            </ul>
+                        </section>
+                        <section class="col-6 col-12-narrower">
+                            <h3>Notre histoire</h3>
+                            <div>
+                                Nous sommes une équipe de passionnés dont le but est de divertir chacun grâce à des jeux pour tout le monde. Nous sommes un groupe d'étudiants qui se sont réunis pour créer des jeux de qualités au goût de chacun. Notre objectif est d’apprendre et de découvrir le monde des jeux vidéo.
+                            </div>
+                        </section>
+                        <section class="col-3 col-6-narrower col-12-mobilep">
+
+                            <h3>Contactez nous</h3>
+                            <div>
+                                <p2>info@crystal-games.com</p2>
+                            </div>
+                            <!-- Icons -->
+                            <div>
+                                <ul class="icons">
+                                    <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+                                    <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+                                    <li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+                                    <!--							<li><a href="#" class="icon brands fa-google-plus-g"><span class="label">Google+</span></a></li>
+                                                                <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
                                 </ul>
-                            </section>
-                            <section class="col-6 col-12-narrower">
-                                <h3>Notre histoire</h3>
-                                <div>
-                                    Nous sommes une équipe de passionnés dont le but est d'améliorer la vie de chacun grâce à des produits disruptifs. Nous fabriquons d'excellents produits pour résoudre vos problèmes commerciaux.
-                                </div>
-                            </section>
-                            <section class="col-3 col-6-narrower col-12-mobilep"><h3>Contactez nous</h3>
-                                <div>
-                                    <p2>info@crystal-games.com</p2>
-                                </div>
-                                <!-- Icons -->
-                                <div>
-                                    <ul class="icons">
-                                        <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-                                        <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-                                        <li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-                                        <!--							<li><a href="#" class="icon brands fa-google-plus-g"><span class="label">Google+</span></a></li>
-                                                                    <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
-                                    </ul>
-                                </div>
-                            </section>
-
-                        </div>
+                            </div>
+                        </section>
                     </div>
+                </div>
 
+
+
+                <!-- Copyright -->
+                <div class="copyright">
+                    <ul class="menu">
+                        <li>&copy;Crystal Games co. All rights reserved</li><li>Sponsorisé par <a href="https://www.epita.fr/">l'épita</a></li>
+                    </ul>
+                </div>
+
+            </div>
                     <!-- Scripts -->
                     <script src="assets/js/jquery.min.js"></script>
                     <script src="assets/js/jquery.dropotron.min.js"></script>
@@ -143,11 +197,9 @@
                     <script src="assets/js/util.js"></script>
                     <script src="assets/js/main.js"></script>
                 </div>
-        </div>
-            </section>
-        </div>
     </section>
-</div>
+        </div>
+
 </body>
 
 </html>
