--- a/Site Stealwar/index.html
+++ b/Site Stealwar/index.html
@@ -11,6 +11,12 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="icon" type="images/logo.png" href=" images/logo.png">
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<style>
+			img {
+				width: 300px; /* Définissez la largeur de l'image */
+				height: auto; /* Laissez la hauteur automatique pour conserver les proportions */
+			}
+		</style>
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
@@ -19,7 +25,7 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">Steel War <em> by Crystal games</em></a></h1>
+						<h1><a href="index.html" id="logo">StealWar <em> by Crystal games</em></a></h1>
 
 					<!-- Nav -->
 						<nav id="nav">
@@ -27,7 +33,7 @@
 								<li class="current"><a href="index.html">Home</a></li>
 								<li><a href="ProposDeNous.html">A Propos de Nous</a></li>
 								<li><a href="Avancement.html">Notre Avancement</a></li>
-								<li><a href="left-sidebar.html">Référence</a></li>
+								<li><a href="Reference.html">Référence</a></li>
 								<li><a href="no-sidebar.html">Mentions légale</a></li>
 							</ul>
 						</nav>
@@ -45,8 +51,9 @@
 			<section class="wrapper style2">
 				<div class="container">
 					<header class="major">
-						<h2>A gigantic heading you can use for whatever</h2>
-						<p>With a much smaller subtitle hanging out just below it</p>
+						<h2>Notre jeu</h2>
+						<p>N'attendez plus télécharger notre jeu
+						</p>
 						<a href="votre_fichier.zip" download>  <!-- Ici faut mettre le chemin de notre fichier  -->
 							<button type="button" title="Télécharger le jeu">
 								<i class="fa fa-download"></i> Télécharger le jeu
@@ -55,6 +62,23 @@
 					</header>
 				</div>
 			</section>
+			<section id="one" class="main style1">
+			<div class="container">
+				<div class="row gtr-150">
+					<div class="col-6 col-12-medium">
+						<header class="major">
+							<h2>Notre inspiration pour<br />
+								StealWar</h2>
+						</header>
+						<p>La nature du projet vient donc d’un jeu de cambriolage. La partie commence par une mise au point stratégique, le voleur choisit ses particularités physiques parmi celles proposées. Il s’agit d’avantages spécifiques limités lui permettant de se spécialiser dans un certain domaine pour avoir un avantage sur celui-ci. Le responsable de la sécurité quant à lui choisit de placer les gardes, incarnés par des intelligences artificielles, les caméras, pièges et autres outils de défense sur la carte à la discrétion du voleur. Cela permet au jeu d’avoir une rejouabilité bien plus grande que si ces éléments étaient fixes pour toutes les parties. Ensuite, la phase de jeu commence et les deux camps s’affrontent indirectement, le but étant de déjouer les plans de l’autre et d’essayer de comprendre la stratégie de l’autre. Si le voleur arrive à passer au travers des obstacles posés par le garde, à savoir caméras, gardes, alarmes, portes verrouillées et autre ajout possible en cours de développement. Alors il lui faut s’enfuir, le policier a alors deux choix, sortir de sa salle et essayé d’aller lui-même attraper le voleur, ou continuer d’essayer de piloter à distance la sécurité de l’endroit.
+						</p>
+					</div>
+					<div class="col-6 col-12-medium imp-medium">
+						<span class="image fit"><img src="images/logo1.png" alt="" /></span>
+					</div>
+				</div>
+			</div>
+		</section>
 			<!-- Highlights -->
 				<section class="wrapper style1">
 					<div class="container">
@@ -62,49 +86,26 @@
 
 							<section class="col-6 col-6-narrower">
 								<div class="box highlight">
-									<i class="icon solid major fa-pencil-alt"></i>
-									<h3>Also Important</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+									<i><span class="image"><img src="images/cop.png" alt="" /></span></i>
+									<h3>Responsable de la sécurité</h3>
+									<p>Son but est d’empêcher le cambrioleur de dérober le précieux butin. Ce joueur se trouve dans une salle isolée du bâtiment, depuis laquelle il lui est possible d’accéder aux caméras de surveillance du lieu cambriolé, lui permettant de repérer son adversaire, il a aussi en sa possession une carte dynamique stratégique lui permettant d’aiguiller les gardes, de déclencher des pièges, de déclencher des alarmes et de fermer des portes, dans le but d’empêcher le combrioleur d’accéder au butin. </p>
 								</div>
 							</section>
 							<section class="col-6 col-6-narrower">
 								<div class="box highlight">
-									<i class="icon solid major fa-wrench"></i>
-									<h3>Probably Important</h3>
-									<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+									<i><span class="image"><img src="images/robber.jpg" alt="" /></span></i>
+									<h3>Combrioleur</h3>
+									<p>Son but principal étant de s’infiltrer dans un bâtiment sécurisé, afin de voler le butin, caché dans un endroit spécifique de la carte. Pour cela, il doit éviter les gardes qui rôdent et essaient de l’arrêter. Ces gardes sont des intelligences artificielles qui poursuivent et tentent d’attraper le combrioleur s'ils l’aperçoivent. Si le combrioleur parvient à récupérer le butin et à s’échapper dans le temps impartit, il remporte la partie. Si, au contraire, il se fait attraper par un garde ou arrive à la fin du temps, il perd alors la partie.  </p>
 								</div>
 							</section>
 						</div>
 					</div>
 				</section>
+
 
 
 
 			<!-- Posts -->
-				<section class="wrapper style1">
-					<div class="container">
-						<div class="row">
-							<section class="col-6 col-12-narrower">
-								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
-									<div class="inner">
-										<h3>The Third Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-									</div>
-								</div>
-							</section>
-							<section class="col-6 col-12-narrower">
-								<div class="box post">
-									<a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
-									<div class="inner">
-										<h3>The Fourth Thing</h3>
-										<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
-									</div>
-								</div>
-							</section>
-						</div>
-					</div>
-				</section>
 
 			<!-- CTA -->
 				<!--<section id="cta" class="wrapper style3">
@@ -126,14 +127,14 @@
 									<li class="current"><a href="index.html">Home</a></li>
 									<li><a href="ProposDeNous.html">A Propos de Nous</a></li>
 									<li><a href="Avancement.html">Notre Avancement</a></li>
-									<li><a href="two-sidebar.html">Référence</a></li>
+									<li><a href="Reference.html">Référence</a></li>
 									<li><a href="no-sidebar.html">Mentions légale</a></li>
 								</ul>
 							</section>
 							<section class="col-6 col-12-narrower">
 								<h3>Notre histoire</h3>
 								<div>
-									Nous sommes une équipe de passionnés dont le but est d'améliorer la vie de chacun grâce à des produits disruptifs. Nous fabriquons d'excellents produits pour résoudre vos problèmes commerciaux.
+									Nous sommes une équipe de passionnés dont le but est de divertir chacun grâce à des jeux pour tout le monde. Nous sommes un groupe d'étudiants qui se sont réunis pour créer des jeux de qualités au goût de chacun. Notre objectif est d’apprendre et de découvrir le monde des jeux vidéo.
 								</div>
 							</section>
 							<section class="col-3 col-6-narrower col-12-mobilep">
