--- a/Site Stealwar/Reference.html
+++ b/Site Stealwar/Reference.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Arcana by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 <head>
     <title>Crystal Games</title>
@@ -24,7 +20,7 @@
         <!-- Nav -->
         <nav id="nav">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Accueil</a></li>
                 <li><a href="ProposDeNous.html">A Propos de Nous</a></li>
                 <li><a href="Avancement.html">Notre Avancement</a></li>
                 <li class="current"><a href="Reference.html">Référence</a></li>
@@ -62,10 +58,10 @@
                 <section class="col-3 col-6-narrower col-12-mobilep">
                     <h3>Links to Stuff</h3>
                     <ul class="links">
-                        <li class="current"><a href="index.html">Home</a></li>
+                        <li><a href="index.html">Accueil</a></li>
                         <li><a href="ProposDeNous.html">A Propos de Nous</a></li>
                         <li><a href="Avancement.html">Notre Avancement</a></li>
-                        <li><a href="Reference.html">Référence</a></li>
+                        <li class="current"><a href="Reference.html">Référence</a></li>
                         <li><a href="no-sidebar.html">Mentions légale</a></li>
                     </ul>
                 </section>
@@ -87,8 +83,6 @@
                             <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
                             <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
                             <li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-                            <!--							<li><a href="#" class="icon brands fa-google-plus-g"><span class="label">Google+</span></a></li>
-                                                        <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
                         </ul>
                     </div>
                 </section>
