--- a/Site Stealwar/index.html
+++ b/Site Stealwar/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Arcana by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Crystal Games</title>
@@ -30,7 +26,7 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li class="current"><a href="index.html">Home</a></li>
+								<li class="current"><a href="index.html">Acceuil</a></li>
 								<li><a href="ProposDeNous.html">A Propos de Nous</a></li>
 								<li><a href="Avancement.html">Notre Avancement</a></li>
 								<li><a href="Reference.html">Référence</a></li>
@@ -41,18 +37,14 @@
 				</div>
 
 			<!-- Banner-->
-				<section id="banner"><!--
-					<header>
-						<h2>Arcana: <em>A responsive site template freebie by <a href="http://html5up.net">HTML5 UP</a></em></h2>
-						<a href="#" class="button">Learn More</a>
-					</header>-->
+				<section id="banner">
 				</section>
 			<!-- Gigantic Heading -->
 			<section class="wrapper style2">
 				<div class="container">
 					<header class="major">
 						<h2>Notre jeu</h2>
-						<p>N'attendez plus télécharger notre jeu
+						<p>N'attendez plus pour télécharger notre jeu
 						</p>
 						<a href="votre_fichier.zip" download>  <!-- Ici faut mettre le chemin de notre fichier  -->
 							<button type="button" title="Télécharger le jeu">
@@ -70,7 +62,7 @@
 							<h2>Notre inspiration pour<br />
 								StealWar</h2>
 						</header>
-						<p>La nature du projet vient donc d’un jeu de cambriolage. La partie commence par une mise au point stratégique, le voleur choisit ses particularités physiques parmi celles proposées. Il s’agit d’avantages spécifiques limités lui permettant de se spécialiser dans un certain domaine pour avoir un avantage sur celui-ci. Le responsable de la sécurité quant à lui choisit de placer les gardes, incarnés par des intelligences artificielles, les caméras, pièges et autres outils de défense sur la carte à la discrétion du voleur. Cela permet au jeu d’avoir une rejouabilité bien plus grande que si ces éléments étaient fixes pour toutes les parties. Ensuite, la phase de jeu commence et les deux camps s’affrontent indirectement, le but étant de déjouer les plans de l’autre et d’essayer de comprendre la stratégie de l’autre. Si le voleur arrive à passer au travers des obstacles posés par le garde, à savoir caméras, gardes, alarmes, portes verrouillées et autre ajout possible en cours de développement. Alors il lui faut s’enfuir, le policier a alors deux choix, sortir de sa salle et essayé d’aller lui-même attraper le voleur, ou continuer d’essayer de piloter à distance la sécurité de l’endroit.
+						<p>La nature du projet vient donc d’un jeu de cambriolage. La partie commence par une mise au point stratégique, le voleur choisit ses particularités physiques parmi celles proposées. Il s’agit d’avantages spécifiques limités lui permettant de se spécialiser dans un certain domaine pour avoir un avantage sur celui-ci. Le responsable de la sécurité quant à lui choisit de placer les gardes, incarnés par des intelligences artificielles, les caméras, pièges et autres outils de défense sur la carte à la discrétion du voleur. Cela permet au jeu d’avoir une rejouabilité bien plus grande que si ces éléments étaient fixes pour toutes les parties. Ensuite, la phase de jeu commence et les deux camps s’affrontent indirectement, le but étant de déjouer les plans de l’autre et d’essayer de comprendre la stratégie de l’autre. Si le voleur arrive à passer au travers des obstacles posés par le garde, à savoir caméras, gardes, alarmes, portes verrouillées et autre ajout possible en cours de développement. Alors il lui faut s’enfuir, le policier a alors deux choix, sortir de sa salle et essayer d’aller lui-même attraper le voleur, ou continuer d’essayer de piloter à distance la sécurité de l’endroit.
 						</p>
 					</div>
 					<div class="col-6 col-12-medium imp-medium">
@@ -88,34 +80,20 @@
 								<div class="box highlight">
 									<i><span class="image"><img src="images/cop.png" alt="" /></span></i>
 									<h3>Responsable de la sécurité</h3>
-									<p>Son but est d’empêcher le cambrioleur de dérober le précieux butin. Ce joueur se trouve dans une salle isolée du bâtiment, depuis laquelle il lui est possible d’accéder aux caméras de surveillance du lieu cambriolé, lui permettant de repérer son adversaire, il a aussi en sa possession une carte dynamique stratégique lui permettant d’aiguiller les gardes, de déclencher des pièges, de déclencher des alarmes et de fermer des portes, dans le but d’empêcher le combrioleur d’accéder au butin. </p>
+									<p>Son but est d’empêcher le cambrioleur de dérober le précieux butin. Ce joueur se trouve dans une salle isolée du bâtiment, depuis laquelle il lui est possible d’accéder aux caméras de surveillance du lieu cambriolé, lui permettant de repérer son adversaire. Il a aussi en sa possession une carte dynamique stratégique lui permettant d’aiguiller les gardes, de déclencher des pièges, des alarmes et de fermer des portes, dans le but d’empêcher le cambrioleur d’accéder au butin.</p>
 								</div>
 							</section>
 							<section class="col-6 col-6-narrower">
 								<div class="box highlight">
 									<i><span class="image"><img src="images/robber.jpg" alt="" /></span></i>
-									<h3>Combrioleur</h3>
-									<p>Son but principal étant de s’infiltrer dans un bâtiment sécurisé, afin de voler le butin, caché dans un endroit spécifique de la carte. Pour cela, il doit éviter les gardes qui rôdent et essaient de l’arrêter. Ces gardes sont des intelligences artificielles qui poursuivent et tentent d’attraper le combrioleur s'ils l’aperçoivent. Si le combrioleur parvient à récupérer le butin et à s’échapper dans le temps impartit, il remporte la partie. Si, au contraire, il se fait attraper par un garde ou arrive à la fin du temps, il perd alors la partie.  </p>
+									<h3>cambrioleur</h3>
+									<p>Son but principal étant de s’infiltrer dans un bâtiment sécurisé afin de voler le butin, caché dans un endroit spécifique de la carte. Pour cela, il doit éviter les gardes qui rôdent et essaient de l’arrêter. Ces gardes sont des intelligences artificielles qui poursuivent et tentent d’attraper le cambrioleur s'ils l’aperçoivent. Si le cambrioleur parvient à récupérer le butin et à s’échapper dans le temps imparti, il remporte la partie. Si, au contraire, il se fait attraper par un garde ou arrive à la fin du temps imparti, il perd alors la partie.</p>
 								</div>
 							</section>
 						</div>
 					</div>
 				</section>
 
-
-
-
-			<!-- Posts -->
-
-			<!-- CTA -->
-				<!--<section id="cta" class="wrapper style3">
-					<div class="container">
-						<header>
-							<h2>Are you ready to continue your quest?</h2>
-							<a href="#" class="button">Insert Coin</a>
-						</header>
-					</div>
-				</section>-->
 
 			<!-- Footer -->
 				<div id="footer">
@@ -124,7 +102,7 @@
 							<section class="col-3 col-6-narrower col-12-mobilep">
 								<h3>Links to Stuff</h3>
 								<ul class="links">
-									<li class="current"><a href="index.html">Home</a></li>
+									<li class="current"><a href="index.html">Accueil</a></li>
 									<li><a href="ProposDeNous.html">A Propos de Nous</a></li>
 									<li><a href="Avancement.html">Notre Avancement</a></li>
 									<li><a href="Reference.html">Référence</a></li>
@@ -138,25 +116,6 @@
 								</div>
 							</section>
 							<section class="col-3 col-6-narrower col-12-mobilep">
-								<!--<h3>Get In Touch</h3>
-								<form>
-									<div class="row gtr-50">
-										<div class="col-6 col-12-mobilep">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="col-6 col-12-mobilep">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="col-12">
-											<textarea name="message" id="message" placeholder="Message" rows="5"></textarea>
-										</div>
-										<div class="col-12">
-											<ul class="actions">
-												<li><input type="submit" class="button alt" value="Send Message" /></li>
-											</ul>
-										</div>
-									</div>
-								</form>-->
 								<h3>Contactez nous</h3>
 								<div>
 									<p2>info@crystal-games.com</p2>
@@ -167,8 +126,6 @@
 									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 									<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-									<!--							<li><a href="#" class="icon brands fa-google-plus-g"><span class="label">Google+</span></a></li>
-                                                                <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
 								</ul>
 								</div>
 							</section>
