--- a/Site Stealwar/Avancement.html
+++ b/Site Stealwar/Avancement.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Arcana by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 <head>
     <title>Notre Avancement</title>
@@ -24,7 +19,7 @@
         <!-- Nav -->
         <nav id="nav">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Accueil</a></li>
                 <li><a href="ProposDeNous.html">A Propos de Nous</a></li>
                 <li class="current"><a href="Avancement.html">Notre Avancement</a></li>
                 <li><a href="Reference.html">Référence</a></li>
@@ -146,9 +141,9 @@
                         <section class="col-3 col-6-narrower col-12-mobilep">
                             <h3>Links to Stuff</h3>
                             <ul class="links">
-                                <li class="current"><a href="index.html">Home</a></li>
+                                <li><a href="index.html">Accueil</a></li>
                                 <li><a href="ProposDeNous.html">A Propos de Nous</a></li>
-                                <li><a href="Avancement.html">Notre Avancement</a></li>
+                                <li class="current"><a href="Avancement.html">Notre Avancement</a></li>
                                 <li><a href="Reference.html">Référence</a></li>
                                 <li><a href="no-sidebar.html">Mentions légale</a></li>
                             </ul>
@@ -171,8 +166,6 @@
                                     <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
                                     <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
                                     <li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-                                    <!--							<li><a href="#" class="icon brands fa-google-plus-g"><span class="label">Google+</span></a></li>
-                                                                <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
                                 </ul>
                             </div>
                         </section>
