--- a/Site Stealwar/ProposDeNous.html
+++ b/Site Stealwar/ProposDeNous.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Arcana by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 <head>
     <title>A Propos de Nous</title>
@@ -24,7 +20,7 @@
         <!-- Nav -->
         <nav id="nav">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Accueil</a></li>
                 <li class="current"><a href="ProposDeNous.html">A Propos de Nous</a></li>
                 <li><a href="Avancement.html">Notre Avancement</a></li>
                 <li><a href="Reference.html">Référence</a></li>
@@ -59,8 +55,7 @@
                                 <a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
                                 <div class="inner">
                                     <h3>Valentin Gunera</h3>
-                                    <p>Leader de notre groupe, Valentin a passé une grande partie de ça vie dans le monde des jeux-vidéos, il a même joué à un niveau semi-professionnel. C’est pour cela qu’il a pris les rênes du groupe pour ça grande connaissance en jeux vidéo.
-                                        Il est chargé du game design et du gameplay.
+                                    <p>Leader de notre groupe, Valentin a passé une grande partie de sa vie dans le monde des jeux vidéo, il a même joué à un niveau semi-professionnel. C’est pourquoi il a pris les rênes du groupe pour sa grande connaissance en jeux vidéo. Il est chargé du game design et du gameplay.
                                     </p>
                                 </div>
                             </div>
@@ -70,9 +65,7 @@
                                 <a href="#" class="image left"><img src="images/pic02.jpg" alt="" /></a>
                                 <div class="inner">
                                     <h3>Elouan Dantec</h3>
-                                    <p>Passionné de développement informatique, Elouan aura l’occasion pour lui de découvrir de nouvelles méthodes de travail et d’approfondir ces connaissances dans le domaine informatique.
-                                        Dans le cadre du projet, il travaillera sur l’implémentation de l’intelligence artificielle,  et des mécaniques de contrôle et de déplacement du joueur, mais aussi la construction des différents niveaux du jeu.
-                                    </p>
+                                    <p>Passionné de développement informatique, Elouan aura l’occasion de découvrir de nouvelles méthodes de travail et d’approfondir ses connaissances dans le domaine informatique. Dans le cadre du projet, il travaillera sur l’implémentation de l’intelligence artificielle, ainsi que sur les mécaniques de contrôle et de déplacement du joueur, mais aussi sur la construction des différents niveaux du jeu.</p>
                                 </div>
                             </div>
                         </section>
@@ -83,8 +76,8 @@
                                 <a href="#" class="image left"><img src="images/pic03.jpg" alt="" /></a>
                                 <div class="inner">
                                     <h3>Matteo Evola</h3>
-                                    <p>Actuellement en première année à l’EPITA, Matteo est passionné d'informatique. Il s’intéresse à différentes sphères de l’informatique, telles que l’informatique embarquée, ou encore la programmation orientée objet. Il est impatient de développer ces connaissances grâce au projet StealWar.
-                                        Il a choisi de travailler sur l’IA ainsi que sur les graphismes et les FX, car ce sont des domaines inconnus qu’il souhaite apprendre.
+                                    <p>Matteo est passionné d'informatique. Il s’intéresse à différentes sphères de l’informatique, telles que l’informatique embarquée, ou encore la programmation orientée objet. Il est impatient de développer ses connaissances grâce au projet StealWar. Il a choisi de travailler sur l’IA ainsi que sur les graphismes et les effets spéciaux, car ce sont des domaines inconnus qu’il souhaite apprendre.
+
                                     </p>
                                 </div>
                             </div>
@@ -94,8 +87,7 @@
                                 <a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
                                 <div class="inner">
                                     <h3>Paul Boucheret</h3>
-                                    <p>Ancien étudiant de l’école CESI,intéresser par notre projet Stealwar pour son développement du jeu vidéo qui lui est inconnu et pourrait lui permettre d'apprendre de nouvelles choses.
-                                    Il est en charge du Multiplayer.</p>
+                                    <p>Ancien étudiant de l’école CESI, intéressé par notre projet Stealwar pour son développement du jeu vidéo, qui lui est inconnu et pourrait lui permettre d'apprendre de nouvelles choses. Il est en charge du Multiplayer.</p>
                                 </div>
                             </div>
                         </section>
@@ -104,8 +96,7 @@
                                 <a href="#" class="image left"><img src="images/pc05.jpg" alt="" /></a>
                                 <div class="inner">
                                     <h3>Jules Mangel</h3>
-                                    <p>Un rajout récent à l’équipe. Jules est un passionné d'informatique depuis son plus jeune âge. Sa curiosité insatiable le pousse à toujours en apprendre davantage. Pour Jules, l'informatique n'est pas seulement une carrière, mais une véritable passion
-                                        Il est responsable du site web et aide à développer le multiplayer.
+                                    <p>Un ajout récent à l’équipe. Jules est un passionné d'informatique depuis son plus jeune âge. Sa curiosité insatiable le pousse à toujours en apprendre davantage. Pour Jules, l'informatique n'est pas seulement une carrière, mais une véritable passion. Il est responsable du site web et aide au développement du multijoueur.
                                     </p>
                                 </div>
                             </div>
@@ -121,8 +112,8 @@
                             <section class="col-3 col-6-narrower col-12-mobilep">
                                 <h3>Links to Stuff</h3>
                                 <ul class="links">
-                                    <li class="current"><a href="index.html">Home</a></li>
-                                    <li><a href="ProposDeNous.html">A Propos de Nous</a></li>
+                                    <li><a href="index.html">Accueil</a></li>
+                                    <li class="current"><a href="ProposDeNous.html">A Propos de Nous</a></li>
                                     <li><a href="Avancement.html">Notre Avancement</a></li>
                                     <li><a href="Reference.html">Référence</a></li>
                                     <li><a href="no-sidebar.html">Mentions légale</a></li>
@@ -146,9 +137,7 @@
                                         <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
                                         <li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
                                         <li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-                                        <!--							<li><a href="#" class="icon brands fa-google-plus-g"><span class="label">Google+</span></a></li>
-                                                                    <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
-                                    </ul>
+                                       </ul>
                                 </div>
                             </section>
                         </div>
