--- a/Site Stealwar/no-sidebar.html
+++ b/Site Stealwar/no-sidebar.html
@@ -1,9 +1,6 @@
 <!DOCTYPE HTML>
-<!--
-	Arcana by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
+
 <html>
 	<head><meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -68,7 +65,7 @@
 		<!-- Nav -->
 		<nav id="nav">
 			<ul>
-				<li><a href="index.html">Home</a></li>
+				<li><a href="index.html">Accueil</a></li>
 				<li><a href="ProposDeNous.html">A Propos de Nous</a></li>
 				<li><a href="Avancement.html">Notre Avancement</a></li>
 				<li><a href="Reference.html">Référence</a></li>
