--- a/Site Stealwar/Avancement.html
+++ b/Site Stealwar/Avancement.html
@@ -38,7 +38,7 @@
 
 
                         <header>
-                            <h2>Nos Prévsions</h2>
+                            <h2>Nos Prévisions</h2>
                         </header>
 
                         <p>Afin d’assurer la mise en place et le développement du projet StealWar, nous avons décidé, de répartir les tâches équitablement entre les différents membres de l’entreprise.</P>
@@ -55,7 +55,7 @@
 
             <div class="progress-container">
                 <div class="progress-bar"></div>
-            </div><p>Nous sommes a 15% du jeux </p>
+            </div><p>Nous sommes a 40% du jeux </p>
             <section> <div id="titleBar"></div>
                 <article>
                     <header>
