--- a/Site Stealwar/index.html
+++ b/Site Stealwar/index.html
@@ -46,7 +46,7 @@
 						<h2>Notre jeu</h2>
 						<p>N'attendez plus pour télécharger notre jeu
 						</p>
-						<a href="votre_fichier.zip" download>  <!-- Ici faut mettre le chemin de notre fichier  -->
+						<a href="https://www.mediafire.com/file/53910b0xdrhl4zc/StealWar.zip/file" download>  <!-- Ici faut mettre le chemin de notre fichier  -->
 							<button type="button" title="Télécharger le jeu">
 								<i class="fa fa-download"></i> Télécharger le jeu
 							</button>
