--- a/Site Stealwar/Reference.html
+++ b/Site Stealwar/Reference.html
@@ -56,7 +56,7 @@
         <div class="container">
             <div class="row">
                 <section class="col-3 col-6-narrower col-12-mobilep">
-                    <h3>Links to Stuff</h3>
+                    <h3>Liens</h3>
                     <ul class="links">
                         <li><a href="index.html">Accueil</a></li>
                         <li><a href="ProposDeNous.html">A Propos de Nous</a></li>
