--- a/Site Stealwar/index.html
+++ b/Site Stealwar/index.html
@@ -113,7 +113,7 @@
 				</section>
 				<section class="col-6 col-6-narrower">
 					<div class="box highlight">
-						<i><span class="image"><img src="images/robber.JPG" alt="" /></span></i>
+						<i><span class="image"><img src="images/robber.jpg" alt="" /></span></i>
 						<h3>Cambrioleur</h3>
 						<p>Son but principal étant de s’infiltrer dans un bâtiment sécurisé afin de voler le butin, caché dans un endroit spécifique de la carte. Pour cela, il doit éviter les gardes qui rôdent et essaient de l’arrêter. Ces gardes sont des intelligences artificielles qui poursuivent et tentent d’attraper le cambrioleur s'ils l’aperçoivent. Si le cambrioleur parvient à récupérer le butin et à s’échapper dans le temps imparti, il remporte la partie. Si, au contraire, il se fait attraper par un garde ou arrive à la fin du temps imparti, il perd alors la partie.</p>
 					</div>
